--- a/WonInfo/app/src/main/res/layout/a_19_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/a_19_fragment.xml
@@ -35,7 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/form_margin"
                     android:layout_weight="1"
-                    android:text="원광대 드루와란?"
+                    android:text="원광대학생 전해드려요란?"
                     android:textColor="@color/Theme_Black"
                     android:textSize="@dimen/title_size" />
 
@@ -46,6 +46,7 @@
                 android:id="@+id/a_19_exl0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 >
 
 
@@ -84,7 +85,7 @@
                             android:id="@+id/a_19_btn_facebookLink0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="원광대 드루와"
+                            android:text="원광대학생 전해드려요"
                             android:textColor="@color/colorPrimary" />
 
                         <TextView
@@ -102,7 +103,7 @@
                         android:layout_marginTop="@dimen/form_contentmargin"
                         android:adjustViewBounds="true"
                         android:scaleType="fitStart"
-                        android:src="@drawable/a_19_img_facebook" />
+                        android:src="@drawable/a_19_img_facebooks" />
 
 
                 </LinearLayout>
@@ -143,7 +144,8 @@
             <com.github.chuross.library.ExpandableLayout
                 android:id="@+id/a_19_exl1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
                 <!--app:exl_expanded="true">-->
 
 
@@ -152,20 +154,69 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/form_contentmargin"
-                        android:layout_marginLeft="@dimen/form_margin"
-                        android:text="facebook→'원광대학교 대나무숲'" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="@dimen/form_margin"
+                            android:layout_marginBottom="@dimen/form_contentmargin"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="facebook→ '" />
+
+                            <TextView
+                                android:id="@+id/a_19_btn_facebookLink01"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="원광대학교 대나무숲"
+                                android:textColor="@color/colorPrimary" />
+
+                            <TextView
+                                android:id="@+id/textView7"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="' 클릭" />
+                        </LinearLayout>
 
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/form_contentmargin"
-                        android:layout_marginLeft="@dimen/form_margin"
-                        android:text="facebook→'원광대학교 공식 페이스북'" />
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/form_margin"
+                            android:layout_marginBottom="@dimen/form_contentmargin"
+                            android:text="facebook→ '" />
+
+                        <TextView
+                            android:id="@+id/a_19_btn_facebookLink02"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="원광대학교 공식페이스북"
+                            android:textColor="@color/colorPrimary" />
+
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="' 클릭" />
+                    </LinearLayout>
 
 
                 </LinearLayout>
