--- a/WonInfo/app/src/main/res/layout/home_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/home_main_fragment.xml
@@ -4,6 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:clickable="true"
+    android:background="@color/Theme_White"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -197,6 +198,7 @@ android:clickable="true"
 
     <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
         android:id="@+id/autoViewPager"
+
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="8dp"
@@ -217,6 +219,7 @@ android:clickable="true"
         app:layout_constraintTop_toBottomOf="@+id/autoViewPager">
 
         <android.support.v7.widget.RecyclerView
+            android:background="@color/Theme_White"
             android:id="@+id/Listview"
             android:layout_width="0dp"
             android:layout_height="0dp"
