--- a/WonInfo/app/src/main/res/layout/community_list_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_list_fragment.xml
@@ -41,74 +41,86 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="5dp"
-                android:background="#FFFFFF"
                 android:orientation="horizontal"
+                android:clickable="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/community_layout_refrash">
 
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="14dp"
-                    android:layout_height="30dp"
+                <TextView
+                    android:id="@+id/community_button_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@drawable/all_item_loggedinbtn"
+                    android:gravity="center"
                     android:text="PREV"
                     android:textColor="@color/Theme_White"
                     android:textStyle="bold"
                     android:visibility="visible" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/community_text_page1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:text="1"
+                    android:background="@drawable/all_ripple_click"
+                    android:textColor="@color/Theme_Gray"
                     android:textSize="@dimen/font_18sp" />
 
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/community_text_page2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:text="2"
+                    android:background="@drawable/all_ripple_click"
+                    android:textColor="@color/Theme_Gray"
                     android:textSize="@dimen/font_18sp" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/community_text_page3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:text="3"
+                    android:background="@drawable/all_ripple_click"
+                    android:textColor="@color/Theme_Gray"
                     android:textSize="@dimen/font_18sp" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/community_text_page4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:text="4"
+                    android:background="@drawable/all_ripple_click"
+                    android:textColor="@color/Theme_Gray"
                     android:textSize="@dimen/font_18sp" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/community_text_page5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:text="5"
+                    android:background="@drawable/all_ripple_click"
+                    android:textColor="@color/Theme_Gray"
                     android:textSize="@dimen/font_18sp" />
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="14dp"
-                    android:layout_height="30dp"
+                <TextView
+                    android:id="@+id/community_button_right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@drawable/all_item_loggedinbtn"
+                    android:gravity="center"
                     android:text="Next"
                     android:textColor="@color/Theme_White"
                     android:textStyle="bold" />
