--- a/WonInfo/app/src/main/res/layout/community_market_list.xml
+++ b/WonInfo/app/src/main/res/layout/community_market_list.xml
@@ -35,7 +35,7 @@
 
 
             <LinearLayout
-                android:id="@+id/linearLayout2"
+                android:id="@+id/board_market_list_page"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/community_layout_refrash"
@@ -61,7 +61,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/board_market_page1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -71,7 +71,7 @@
 
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/board_market_page2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -80,7 +80,7 @@
                     android:gravity="center_horizontal"/>
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/board_market_page3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -89,7 +89,7 @@
                     android:gravity="center_horizontal"/>
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/board_market_page4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -98,7 +98,7 @@
                     android:gravity="center_horizontal"/>
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/board_market_page5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
