#11.21 게시판 글 작성 때 들어가는 값이 없으면 막는 걸 만들었어요 이거 날아가면 엉엉 울거야

--- a/WonInfo/app/src/main/res/layout/home_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/home_main_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<android.support.constraint.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
@@ -191,7 +192,7 @@ xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
         android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/all_shape_roundrectanglebox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -229,7 +230,7 @@ xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@color/Theme_LightGray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
@@ -239,8 +240,8 @@ xmlns:tools="http://schemas.android.com/tools"
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_listview_news"
         android:layout_width="0dp"
-        android:layout_height="228dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:background="@drawable/box"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -249,17 +250,15 @@ xmlns:tools="http://schemas.android.com/tools"
         <android.support.v7.widget.RecyclerView
             android:id="@+id/Listview"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            tools:itemCount="6"
+            tools:itemCount=""
             tools:listitem="@layout/home_main_list_item">
 
         </android.support.v7.widget.RecyclerView>
     </android.support.constraint.ConstraintLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
