--- a/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
+++ b/WonInfo/app/src/main/res/layout/community_market_textbroad.xml
@@ -2,8 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/market_layout_rootlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:background="#ffffff"
     tools:layout_editor_absoluteY="81dp">
 
