--- a/WonInfo/app/src/main/res/layout/community_item_document.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_document.xml
@@ -156,6 +156,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
                             android:orientation="vertical"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
