--- a/WonInfo/app/src/main/res/layout/community_list_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/community_list_fragment.xml
@@ -33,7 +33,7 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/Theme_LightGray">
+                android:background="@color/colorBackground">
 
                 <TextView
                     android:id="@+id/board1_button_prev"
@@ -76,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/all_ripple_click"
-                        android:backgroundTint="@color/Theme_LightGray"
+                        android:backgroundTint="@color/colorBackground"
                         android:clickable="true"
                         android:gravity="center_horizontal"
                         android:text="1"
@@ -90,7 +90,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/all_ripple_click"
-                        android:backgroundTint="@color/Theme_LightGray"
+                        android:backgroundTint="@color/colorBackground"
                         android:clickable="true"
                         android:gravity="center_horizontal"
                         android:text="2"
@@ -103,7 +103,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/all_ripple_click"
-                        android:backgroundTint="@color/Theme_LightGray"
+                        android:backgroundTint="@color/colorBackground"
                         android:clickable="true"
                         android:gravity="center_horizontal"
                         android:text="3"
@@ -116,7 +116,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/all_ripple_click"
-                        android:backgroundTint="@color/Theme_LightGray"
+                        android:backgroundTint="@color/colorBackground"
                         android:clickable="true"
                         android:gravity="center_horizontal"
                         android:text="4"
@@ -129,7 +129,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/all_ripple_click"
-                        android:backgroundTint="@color/Theme_LightGray"
+                        android:backgroundTint="@color/colorBackground"
                         android:clickable="true"
                         android:gravity="center_horizontal"
                         android:text="5"
