--- a/WonInfo/app/src/main/res/layout/community_item_comment.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_comment.xml
@@ -68,8 +68,8 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/Theme_LightGray"
+            android:layout_height="1px"
+            android:background="@color/Theme_Gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
