--- a/WonInfo/app/src/main/res/layout/community_item_document.xml
+++ b/WonInfo/app/src/main/res/layout/community_item_document.xml
@@ -17,6 +17,7 @@
             android:layout_height="0dp"
             android:background="@color/Theme_LightGray"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
@@ -58,7 +59,7 @@
                             android:layout_marginTop="10dp"
                             android:text="id"
                             android:textColor="@color/Theme_Black"
-                            android:textSize="@dimen/title_size"
+                            android:textSize="@dimen/font_all_large_17sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toEndOf="@+id/community_board1_profile"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -85,7 +86,7 @@
                             android:layout_marginEnd="16dp"
                             android:text="title"
                             android:textColor="@color/Theme_Black"
-                            android:textSize="@dimen/list_item_bigtitle_size"
+                            android:textSize="@dimen/font_all_large_17sp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +101,7 @@
                             android:layout_marginEnd="16dp"
                             android:text="content"
                             android:textColor="@color/Theme_Black"
-                            android:textSize="@dimen/bigtitle_size"
+                            android:textSize="@dimen/mini_size"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/community_board1_title" />
@@ -110,10 +111,10 @@
                             android:layout_width="18dp"
                             android:layout_height="18dp"
                             android:layout_marginEnd="4dp"
+                            android:tint="@color/Theme_Blue"
                             app:layout_constraintBottom_toBottomOf="@+id/community_board1_commentcount"
                             app:layout_constraintEnd_toStartOf="@+id/community_board1_commentcount"
-                            app:srcCompat="@drawable/ic_comment"
-                            android:tint="@color/Theme_Blue"/>
+                            app:srcCompat="@drawable/ic_comment" />
 
                         <TextView
                             android:id="@+id/community_board1_commentcount"
@@ -122,7 +123,7 @@
                             android:layout_marginEnd="12dp"
                             android:text="0"
                             android:textColor="@color/Theme_Blue"
-                            android:textSize="@dimen/bigtitle_size"
+                            android:textSize="@dimen/font_all_middle_14sp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/community_board1_content" />
@@ -133,10 +134,10 @@
                             android:layout_height="18dp"
                             android:layout_marginEnd="4dp"
                             android:layout_weight="1"
+                            android:tint="@color/Theme_Red"
                             app:layout_constraintBottom_toBottomOf="@+id/community_board1_likecount"
                             app:layout_constraintEnd_toStartOf="@+id/community_board1_likecount"
-                            app:srcCompat="@drawable/ic_like"
-                            android:tint="@color/Theme_Red"/>
+                            app:srcCompat="@drawable/ic_like" />
 
                         <TextView
                             android:id="@+id/community_board1_likecount"
@@ -146,7 +147,7 @@
                             android:layout_weight="1"
                             android:text="0"
                             android:textColor="@color/Theme_Red"
-                            android:textSize="@dimen/bigtitle_size"
+                            android:textSize="@dimen/font_all_middle_14sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                             app:layout_constraintEnd_toStartOf="@+id/imageView8" />
@@ -175,8 +176,8 @@
                     android:id="@+id/community_recycler_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scrollbars="vertical"
                     android:layout_marginBottom="10dp"
+                    android:scrollbars="vertical"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -199,8 +200,8 @@
             android:background="@color/colorBackground">
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/Theme_LightGray"/>
+                android:layout_height="1px"
+                android:background="@color/Theme_Gray"/>
 
             <EditText
                 android:id="@+id/board1_edit_commentwrite"
@@ -209,7 +210,7 @@
                 android:layout_marginStart="8dp"
                 android:background="@null"
                 android:ems="10"
-                android:hint="새 댓글을 작성하세요."
+                android:hint="  새 댓글을 작성하세요."
                 android:inputType="textPersonName"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/board1_btn_commentwrite"
@@ -221,7 +222,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginEnd="8dp"
-                android:background="@drawable/ic_send"
+                android:background="@drawable/ic_send_24dp"
                 android:backgroundTint="@color/Theme_Red"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
