--- a/WonInfo/app/src/main/res/layout/community_list_item.xml
+++ b/WonInfo/app/src/main/res/layout/community_list_item.xml
@@ -116,8 +116,8 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/Theme_LightGray"
+        android:layout_height="1px"
+        android:background="@color/Theme_Gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
