--- a/WonInfo/app/src/main/res/layout/dictionary_main_fragment.xml
+++ b/WonInfo/app/src/main/res/layout/dictionary_main_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
@@ -14,9 +15,11 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:divider="@color/Theme_LightGray"
-        android:dividerHeight="1dp"
-     />
+        android:divider="@color/Theme_Gray"
+        android:dividerHeight="1px"
+        tools:itemCount="3"
+        tools:listitem="@layout/dictionary_item_menu"
+        />
 
 
 </RelativeLayout>
