--- a/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
+++ b/WonInfo/app/src/main/res/layout/main_appbar_layout.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginBottom="1dp"
+            android:layout_marginBottom="1px"
             android:background="@color/Theme_White"
             android:fitsSystemWindows="true">
 
